# pymol

./: .gitignore  README.md  eliminatie_1.csv  eliminatie_1.txt  pymol.py  pyproject.toml
pymol_app/: __init__.py  _app.py  _molfuncs.py
