[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"
[project]
name = "pymol_app"
authors = [
    {name = "Robbert van der Mijn", email = "robbertmijn@gmail.com"},
]
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.5"
dynamic = ["version", "description"]
dependencies = [
    "pygame",
    "numpy",
]
[project.script]
pymol = "pymol_app._app:app"
[project.urls]
Documentation = "https://github.com/robbertmijn/pymol"
Source = "https://github.com/robbertmijn/pymol"